--- a/src/Dematt.Airy.Nhibernate.NodaTime/packages.config
+++ b/src/Dematt.Airy.Nhibernate.NodaTime/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net452" />
-  <package id="NodaTime" version="1.3.2" targetFramework="net452" />
+  <package id="NodaTime" version="2.3.0-beta01" targetFramework="net452" />
 </packages>
